--- a/app/templates/order/create_order.html
+++ b/app/templates/order/create_order.html
@@ -99,7 +99,7 @@
                 <button type="submit" class="btn btn-primary" id="submitBtn">
                     <i class="bi bi-check-circle"></i> Create Order
                 </button>
-                <a href="{{ url_for('orders.orders') }}" class="btn btn-outline-secondary">
+                <a href="{{ url_for('web.orders.orders') }}" class="btn btn-outline-secondary">
                     <i class="bi bi-x-circle"></i> Cancel
                 </a>
             </div>
