--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,8 +27,8 @@
                 <li><a class="nav-link" href="{{ url_for('web.products.products') }}"><i class="bi bi-box"></i> Products</a></li>
                 <li><a class="nav-link" href="{{ url_for('web.orders.delivery_order') }}"><i class="bi bi-truck"></i> Delivery</a></li>
                 <li><a class="nav-link" href="{{ url_for('web.customer.customers_page') }}"><i class="bi bi-truck"></i> Customers</a></li>
-                <li><a class="nav-link" href="{{ url_for('cashflow.cashflow_create') }}"><i class="bi bi-truck"></i> Insert Cashflow</a></li>
-                <li><a class="nav-link" href="{{ url_for('cashflow.cashflow_transactions') }}"><i class="bi bi-truck"></i> Cashflow</a></li>
+                <li><a class="nav-link" href="{{ url_for('web.cashflow.cashflow_create') }}"><i class="bi bi-truck"></i> Insert Cashflow</a></li>
+                <li><a class="nav-link" href="{{ url_for('web.cashflow.cashflow_transactions') }}"><i class="bi bi-truck"></i> Cashflow</a></li>
 
             </ul>
             </div>
