--- a/app/templates/order/edit_order.html
+++ b/app/templates/order/edit_order.html
@@ -150,7 +150,7 @@
 
         async function loadProducts() {
             try {
-                const response = await fetch('/api/products/active');
+                const response = await fetch('/api/products');
                 products = await response.json();
                 
             } catch (error) {
