--- a/app/templates/order/orders.html
+++ b/app/templates/order/orders.html
@@ -390,7 +390,7 @@
                                         <tr>
                                             <td colspan="4" class="text-end"><strong>Total:</strong></td>
                                             <td class="text-end">
-                                                <strong class="text-primary">Rp ${formatRupiah(order.total_amount)}</strong>
+                                                <strong class="text-primary">Rp ${formatRupiah(order.total_amount + order.delivery_price)}</strong>
                                             </td>
                                         </tr>
                                     </tfoot>
